# expensify-os

./: .env.op  .gitignore  LICENSE  README.md  STATUS.md  config.example.yaml  pyproject.toml
docs/: n8n-integration.md  plugin-development.md
examples/: n8n-workflow.json
src/expensify_os/: __init__.py  __main__.py  cli.py  config.py  models.py
src/expensify_os/browser/: automation.py  storage.py
src/expensify_os/expensify/: client.py  rate_limiter.py
src/expensify_os/plugins/: anthropic.py  base.py  openai.py  registry.py  vodafone.py
src/expensify_os/utils/: logging.py  notifications.py  secrets.py
tests/: conftest.py  test_browser.py  test_cli.py  test_config.py  test_models.py  test_secrets.py
tests/test_expensify/: test_client.py  test_rate_limiter.py
tests/test_plugins/: test_anthropic.py  test_openai.py  test_registry.py  test_vodafone.py
